# collaborative_document_editing

./: .env  Dockerfile  README.md  USAGE.md  alembic.ini  docker-compose.yml  pyproject.toml
cmd/: server.py
deployments/: prometheus.yml
frontend/: dashboard.html  editor.html  index.html
frontend/css/: app.css
frontend/js/: api.js  auth.js  dashboard.js  editor.js
internal/: app.py  database.py  logging.py
internal/collaboration/: ot.py
internal/config/: settings.py
internal/handlers/: auth.py  documents.py  health.py  websocket.py
internal/metrics/: collector.py
internal/middleware/: auth.py  rate_limit.py
internal/models/: entities.py  schemas.py
internal/pubsub/: redis_bus.py
internal/repositories/: documents.py  users.py
internal/services/: auth.py  documents.py
internal/websocket/: manager.py
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_share_token.py
scripts/: load_test.py  seed.py
tests/: test_ot.py
