[project]
name = "collab-docs-backend"
version = "0.1.0"
description = "Production-style real-time collaborative document backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy[asyncio]>=2.0.30",
  "asyncpg>=0.29.0",
  "alembic>=1.13.0",
  "pydantic-settings>=2.4.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "bcrypt>=4.0.1,<5",
  "redis>=5.0.0",
  "prometheus-client>=0.20.0",
  "structlog>=24.1.0",
  "python-multipart>=0.0.9",
  "email-validator>=2.2.0",
  "aiokafka>=0.10.0",
  "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "httpx>=0.27.0",
  "ruff>=0.5.0",
  "locust>=2.29.0",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["internal*"]
exclude = ["cmd*", "migrations*", "deployments*", "scripts*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"
